--- a/To-Do.html
+++ b/To-Do.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html ng-app="listapp">
 <head>
-    <script src="scripts/angular.min.js"></script>
+    <script src="//code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
     <title>To-Do List</title>
 	<meta charset="utf-8" />
-    <script src="scripts/ToDoList.js"></script>
+    <script src="ToDoList.js"></script>
 </head>
 <body ng-controller="listcntroller as ctrl">
     <div>
